# cxx_project_template

./: CMakeLists.txt
gtests/: CMakeLists.txt  tests.cpp
shared-lib/: CMakeLists.txt  shared.cpp  shared.h
src/: CMakeLists.txt  application.cpp
static-lib/: CMakeLists.txt  static.cpp  static.h
tests/: CMakeLists.txt  tests.cpp
